--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -14,6 +14,13 @@
     <td>
       <%= link_to("Edit", edit_job_path(job)) %> |
       <%= link_to("Destroy", job_path(job), :method => :delete, :data => { :confirm => "Are you sure?" }) %>
+
+      <% if job.is_hidden %>
+
+       <%= link_to("Publish", Publish_admin_job_path(job) , :method => :post, :class => "btn btn-default") %>
+    <% else %>
+       <%= link_to("Hide", hide_admin_job_path(job), :method => :post,  :class => "btn btn-default") %>
+    <% end %>
     </td>
     <td>
       <%= job.created_at %>
