--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -2,7 +2,7 @@
   <%= link_to("Add a Job", new_admin_job_path, class: "btn btn-default btn-sm") %>
 </div>
 <br><br>
-<table class="table table-boldered">
+<table class="table table-boldered table-striped custab" >
     <thead>
         <tr>
             <td>
@@ -39,17 +39,13 @@
         <td> <%= job.wage_lower_bound %> </td>
         <td> <%= job.wage_upper_bound %> </td>
         <td>
-            <%= link_to("Edit", edit_admin_job_path(job)) %>
-            |
-            <%= link_to("Destroy", admin_job_path(job), :method => :delete, :data => { :confirm => "Are you sure?" }) %>
-
-            |
-            <% if job.is_hidden %>
-
-            <%= link_to("Publish", publish_admin_job_path(job), :method => :post, :class => "btn btn-xs btn-default") %>
+        <%= link_to("Edit", edit_admin_job_path(job), :class => "btn btn-xs btn-info") %>
+        <%= link_to("Destroy", admin_job_path(job), :method => :delete, :class => "btn btn-xs btn-danger", :data => { :confirm => "Are you sure?" }) %>
+        <% if job.is_hidden %>
+        <%= link_to("Publish", publish_admin_job_path(job) , :method => :post, :class => "btn btn-xs btn-success") %>
         <% else %>
-            <%= link_to("Hide", hide_admin_job_path(job), :method => :post,  :class => "btn btn-xs btn-default") %>
-            <% end %>
+        <%= link_to("Hide", hide_admin_job_path(job), :method => :post,  :class => "btn btn-xs btn-warning") %>
+        <% end %>
         </td>
         <td>
             <%= job.created_at %>
