better welcome/index & admin/jobs/index

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,10 @@
 <div class="jumbotron">
-     <h1 class="title">18K Offer</h1>
-     <p class="slogan">18K Offer 是一个提供18K薪水工作机会的求职网站。
+     <h1 class="title">人才网</h1>
+     <p class="slogan">人才网是一个专为专业型技能人提供优质工作的求职网站。
      <br>
-     我们希望藉由这个网站，能让大家找到且应征上高薪且优质的工作。
+     我们希望藉由这个网站，能让非常专业的人才快速找到适合自己的高薪优质工作。
      <br>
-      凭借自己的努力和天份也会变 Winner
+      让你的专业成为你的助推器！
      </p>
      <p class="lead"><a class="btn btn-lg btn-danger" href="/jobs">马上应征</a></p>
    </div>
