--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,41 +1,64 @@
-<div class="jumbotron">
-     <h1 class="title">人才网</h1>
-     <p class="slogan">人才网是一个专为专业型技能人提供优质工作的求职网站。
-     <br>
-     我们希望藉由这个网站，能让非常专业的人才快速找到适合自己的高薪优质工作。
-     <br>
-      让你的专业成为你的助推器！
-     </p>
-     <p class="lead"><a class="btn btn-lg btn-danger" href="/jobs">马上应征</a></p>
-   </div>
 
-   <section id="company">
-     <div class = "container-fluid">
-       <div class="row">
-         <div class="col-sm-4 ">
-           <div class="thumbnail">
-             <img src="http://fullstack-public.oss-cn-qingdao.aliyuncs.com/2017-04-15-Screenshot%20at%20Apr%2015%2021-43-31.png" alt="search" class = "img-thumbnail">
-             <div class="caption">
-               <h3>北京朝阳建外SOHO</h3>
-             </div>
-           </div>
-         </div>
-         <div class="col-sm-4 ">
-           <div class="thumbnail">
-             <img src="http://fullstack-public.oss-cn-qingdao.aliyuncs.com/2017-04-15-Screenshot%20at%20Apr%2015%2021-43-48.png" alt="bid" class = "img-thumbnail">
-             <div class="caption">
-               <h3>info@18koffer.com</h3>
-             </div>
-           </div>
-         </div>
-         <div class="col-sm-4 ">
-           <div class="thumbnail">
-             <img src="http://fullstack-public.oss-cn-qingdao.aliyuncs.com/2017-04-15-Screenshot%20at%20Apr%2015%2021-44-00.png" alt="heart" class = "img-thumbnail">
-             <div class="caption">
-               <h3>010-12344321</h3>
-             </div>
-           </div>
-         </div>
-       </div>
-     </div>
-   </section>
+  <div class="jumbotron">
+    <div class="index-title">
+      <h1 class="title">新希望招聘网</h1>
+      <p class="slogan">在这里，你可以找到足球的一切。
+      <br>
+      在这里，你可以实现足球的梦想。
+      <br>
+       这里是新希望！
+      </p>
+      <p class="lead"><a class="btn btn-lg btn-danger" href="/jobs">马上上场</a></p>
+
+    </div>
+  </div>
+
+
+   <div class="content-section-a">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-5 col-sm-6">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading">足球专业人士</h2>
+             <p class="lead">你是专业教练或者从事足球相关行业多年</p>
+          </div>
+          <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+            <%= image_tag 'pic-4.jpg', class: 'img-responsive' %>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+<div class="content-section-b">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+        <hr class="section-heading-spacer">
+        <div class="clearfix"></div>
+        <h2 class="section-heading">你是专业球员退役</h2>
+        <p class="lead">想从事教练、球探等工作，点击进入<br><a target="_blank" href="http://blog.niclin.tw">Nic 的 Blog</a></p>
+      </div>
+      <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+        <%= image_tag 'pic-5.jpg', class: 'img-responsive' %>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="content-section-a">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-5 col-sm-6">
+        <hr class="section-heading-spacer">
+        <div class="clearfix"></div>
+        <h2 class="section-heading">你是菜鸟！</h2>
+        <p class="lead">你纯属热爱，但你有梦想<br>那来吧!<br><a target="_blank" href="https://forum.qzy.camp/">论坛资源</a></p>
+      </div>
+      <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+        <%= image_tag 'pic-6.jpg', class: 'img-responsive' %>
+      </div>
+    </div>
+  </div>
+</div>
