new to version-2

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -38,7 +38,7 @@
         <hr class="section-heading-spacer">
         <div class="clearfix"></div>
         <h2 class="section-heading">你是专业球员退役</h2>
-        <p class="lead">想从事教练、球探等工作，点击进入<br><a target="_blank" href="http://blog.niclin.tw">Nic 的 Blog</a></p>
+        <p class="lead">想从事教练、球探等工作，点击进入<br><a target="_blank" href="">Blog</a></p>
       </div>
       <div class="col-lg-5 col-sm-pull-6  col-sm-6">
         <%= image_tag 'pic-5.jpg', class: 'img-responsive' %>
