--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,7 +20,7 @@
  @import "font-awesome";
 
  .jumbotron {
-   background-image:url("header6.jpeg");
+   background-image:url("http://ww3.sinaimg.cn/large/006tNbRwgy1fevimpx4juj30kw0dcgn8.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    padding-bottom: 110px;
