--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -331,6 +331,18 @@
     font-size: 12px;
   }
 
+  .form-group {
+      margin-bottom: 10px;
+      margin-top: 10px;
+  }
+
+  .input-group {
+    position: relative;
+    display: table;
+    border-collapse: separate;
+    width: 250px; //加上width
+}
+
   //---------Footer---------
 
     footer {
