--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -2,12 +2,19 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-    <a class="navbar-brand" href="/"><img src='<%= image_url 'logo.png' %>' >真·24K Offer</a>
+    <a class="navbar-brand" href="/"><img src='<%= image_url 'logo.png' %>' >新希望-Offer</a>
 
     </div>
 
     <!-- Collect the nav links, forms, and other content for togling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li>
+          <div class="form-group form-inline search-bar">
+            <%= render :partial => "jobs/search_bar" %>
+          </div>
+        </li>
+      </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
           <% if !current_user %>
