add new putton & diffent show

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -21,7 +21,7 @@
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
             <h2 class="section-heading">足球专业人士</h2>
-             <p class="lead">你是专业教练或者从事足球相关行业多年</p>
+             <p class="lead">你是教练<br>你是专业球员退役<br>找不到很合意的工作？</p>
           </div>
           <div class="col-lg-5 col-lg-offset-2 col-sm-6">
             <%= image_tag 'pic-4.jpg', class: 'img-responsive' %>
@@ -37,8 +37,8 @@
       <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
         <hr class="section-heading-spacer">
         <div class="clearfix"></div>
-        <h2 class="section-heading">你是专业球员退役</h2>
-        <p class="lead">想从事教练、球探等工作，点击进入<br><a target="_blank" href="">Blog</a></p>
+        <h2 class="section-heading">热爱足球，想献身足球事业</h2>
+        <p class="lead">不管你有无经验<br>在这里可以找到你的起点</p>
       </div>
       <div class="col-lg-5 col-sm-pull-6  col-sm-6">
         <%= image_tag 'pic-5.jpg', class: 'img-responsive' %>
@@ -47,14 +47,15 @@
   </div>
 </div>
 
+
 <div class="content-section-a">
   <div class="container">
     <div class="row">
       <div class="col-lg-5 col-sm-6">
         <hr class="section-heading-spacer">
         <div class="clearfix"></div>
-        <h2 class="section-heading">你是菜鸟！</h2>
-        <p class="lead">你纯属热爱，但你有梦想<br>那来吧!<br><a target="_blank" href="https://forum.qzy.camp/">论坛资源</a></p>
+        <h2 class="section-heading">想要兼职？</h2>
+        <p class="lead">这里有大量的价值工作<br>来吧!</p>
       </div>
       <div class="col-lg-5 col-lg-offset-2 col-sm-6">
         <%= image_tag 'pic-6.jpg', class: 'img-responsive' %>
@@ -62,3 +63,104 @@
     </div>
   </div>
 </div>
+<p>
+
+  <section id="genius" class="our-experts">
+          <div class="container">
+            <div class="col-md-8 col-md-offset-2">
+              <div class="row">
+                <div class="row">
+                  <div class="col-md-6 col-md-offset-3 text-center">
+                    <h2 class="section-title">热门职位</h2>
+                    <div class="short-line"></div>
+                  </div>
+                </div>
+                  <div class="col-md-12">
+                    <div class="row">
+                        <div class="col-md-3 category-list">
+                          <a class="category_1" href="/jobs?category=%E6%8A%80%E6%9C%AF">
+                            <div class="expert-box">
+                                <img src="http://ww3.sinaimg.cn/large/006tNbRwgy1ff4yg00tjgj301s01sa9u.jpg" alt="Category 01">
+                            </div>
+                            <div>
+                              <h3>教练</h3>
+                              <p>Coach</p>
+                            </div>
+</a>                        </div>
+                        <div class="col-md-3 category-list">
+                          <a class="category_2" href="/jobs?category=%E4%BA%A7%E5%93%81">
+                            <div class="expert-box">
+                                <img src="http://ww3.sinaimg.cn/large/006tNbRwgy1ff4ya1h688j301s01sjr6.jpg" alt="Category 02">
+                            </div>
+                            <div>
+                              <h3>俱乐部经理</h3>
+                              <p>Club Manager</p>
+                            </div>
+</a>                        </div>
+                        <div class="col-md-3 category-list">
+                          <a class="category_3" href="/jobs?category=%E8%AE%BE%E8%AE%A1">
+                            <div class="expert-box">
+                                <img src="http://ww3.sinaimg.cn/large/006tNbRwgy1ff4yi1agy6j301s01sa9t.jpg" alt="Category 03">
+                            </div>
+                            <div>
+                              <h3>足球宝贝</h3>
+                              <p>Football girl</p>
+                            </div>
+</a>                        </div>
+                        <div class="col-md-3 category-list">
+                          <a class="category_4" href="/jobs?category=%E8%BF%90%E8%90%A5">
+                            <div class="expert-box">
+                                <img src="http://ww2.sinaimg.cn/large/006tNbRwgy1ff4yky9saoj301s01sgld.jpg" alt="Category 04">
+                            </div>
+                            <div>
+                              <h3>球探</h3>
+                              <p>Scout</p>
+                            </div>
+</a>                        </div>
+                    </div>
+
+
+
+                          </div>
+</a>                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </div>
+        </section>
+
+
+<section id="company">
+  <div class = "container-fluid">
+    <div class="row">
+      <div class="col-sm-4 ">
+        <div class="thumbnail">
+          <img src="http://fullstack-public.oss-cn-qingdao.aliyuncs.com/2017-04-15-Screenshot%20at%20Apr%2015%2021-43-31.png" alt="search" class = "img-thumbnail">
+          <div class="caption">
+            <h3>北京朝阳建外SOHO</h3>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 ">
+        <div class="thumbnail">
+          <img src="http://fullstack-public.oss-cn-qingdao.aliyuncs.com/2017-04-15-Screenshot%20at%20Apr%2015%2021-43-48.png" alt="bid" class = "img-thumbnail">
+          <div class="caption">
+            <h3>info@18koffer.com</h3>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 ">
+        <div class="thumbnail">
+          <img src="http://fullstack-public.oss-cn-qingdao.aliyuncs.com/2017-04-15-Screenshot%20at%20Apr%2015%2021-44-00.png" alt="heart" class = "img-thumbnail">
+          <div class="caption">
+            <h3>010-12344321</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+</body>
+</html>
