--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,7 +29,7 @@
  }
 
  .index-title{
-   margin-left: 400px;
+   margin-left: 600px;
  }
 
  .title {
@@ -50,7 +50,7 @@
 .jumbotron p {
    margin: 0;//上下左右margin为0
 
-   font-size: 26px;//字体大小
+   font-size: 28px;//字体大小
    max-width: 500px;//最大宽度
    background-color: rgba(250, 250, 250, 0.39);//背景颜色含透明度
    padding: 50px;//上下左右padding为20px
@@ -73,7 +73,7 @@
  .lead {
    margin-bottom: 60px;
    text-align: center;
-   color: black;
+   color: rgb(44, 112, 144);
  }
 
  //---------Content---------
@@ -341,6 +341,37 @@
     display: table;
     border-collapse: separate;
     width: 250px; //加上width
+}
+
+.our-experts {
+    background-color: #F2F2F2;
+}
+
+.our-experts .expert-box {
+    text-align: center;
+    border: 2px solid #ccc;
+    border-radius: 50px;
+    width: 100px;
+    height: 100px;
+    margin-top: 25px;
+    margin-left: -2px;
+    margin-right: auto;
+}
+
+.our-experts .expert-box img {
+    width: 50px;
+    margin-top: 20px;
+}
+.caption {
+  margin: 30px;
+  text-align: center;
+  top: 20px;
+}
+
+.thumbnail {
+    border: 0 none;
+    box-shadow: none;
+    margin-top: 60px;
 }
 
   //---------Footer---------
