--- a/app/views/admin/jobs/new.html.erb
+++ b/app/views/admin/jobs/new.html.erb
@@ -1,13 +1,18 @@
-<h1> Add a job </h1>
-
-<%= simple_form_for [:admin,@job] do |f| %>
-
-<%= f.input :title %>
-<%= f.input :description %>
-<%= f.input :wage_lower_bound, :label => "薪资下限" %>
-<%= f.input :wage_upper_bound, :label => "薪资上限" %>
-<%= f.input :contact_email %>
-<%= f.input :is_hidden %>
-
-  <%= f.submit "Submit" %>
-<% end %>
+<div class="col-md-8 col-centered">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Add a job</h3>
+      </div>
+      <div class="panel-body">
+        <%= simple_form_for [:admin,@job] do |f| %>
+        <%= f.input :title %>
+        <%= f.input :description %>
+        <%= f.input :wage_lower_bound, :label => "薪资下限" %>
+        <%= f.input :wage_upper_bound, :label => "薪资上限" %>
+        <%= f.input :contact_email %>
+        <%= f.input :is_hidden %>
+        <%= f.submit "Submit", class: 'btn btn-danger' %>
+        <% end %>
+      </div>
+    </div>
+</div>
