--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -18,22 +18,22 @@
       <ul class="nav navbar-nav navbar-right">
         <li>
           <% if !current_user %>
-          <li><a href="#" data-toggle="modal" data-target="#signup-modal">注册</a></li>
-          <li><a href="#" data-toggle="modal" data-target="#login-modal">登入</a></li>
-          <% else %>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                Hi!, <%= current_user.email %>
-                <b class="caret"></b>
-              </a>
-              <ul class="dropdown-menu">
-                  <% if current_user.is_admin %>
-                  <li> <%= link_to("Admin Panel", admin_jobs_path) %> </li>
-                  <% end %>
-                  <li> <%= link_to("登出", destroy_user_session_path, method: :delete) %> </li>
-              </ul>
-            </li>
-          <% end %>
+                   <li><%= link_to("注册", new_user_registration_path) %> </li>
+                   <li><%= link_to("登入", new_user_session_path) %></li>
+                 <% else %>
+                   <li class="dropdown">
+                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                         Hi!, <%= current_user.email %>
+                         <b class="caret"></b>
+                     </a>
+                     <ul class="dropdown-menu">
+                       <% if current_user.is_admin %>
+                        <li> <%= link_to("Admin Panel", admin_jobs_path) %> </li>
+                        <% end %>
+                        <li> <%= link_to("登出", destroy_user_session_path, method: :delete) %> </li>
+                     </ul>
+                   </li>
+                 <% end %>
         </li>
       </ul>
     </div>
