--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -27,7 +27,7 @@
                          <b class="caret"></b>
                      </a>
                      <ul class="dropdown-menu">
-                       <% if current_user.admin? %>
+                       <% if current_user.try(:admin?) %>
                         <li> <%= link_to("Admin Panel", admin_jobs_path) %> </li>
                         <% end %>
                         <li> <%= link_to("登出", destroy_user_session_path, method: :delete) %> </li>
